fix bug panel overlap

--- a/assembl/static/css/layout/_groupContainer.scss
+++ b/assembl/static/css/layout/_groupContainer.scss
@@ -201,7 +201,7 @@
 
   .synthesisPanel {
     position: relative;
-    min-width: 500px;
+    min-width: 400px;
   }
 
   .clipboard {
